--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -19,15 +19,17 @@
         android:clipToPadding="false"/>
 
     <android.support.v7.widget.AppCompatImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="70dp"
         android:src="@drawable/ic_hamburger"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="180dp"
-        android:onClick="hamburgerclicked"
+        android:layout_marginStart="150dp"
+        android:layout_marginEnd="150dp"
+        android:onClick="hamburgerClicked"
+        android:background="@color/transparent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <!--android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
