--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -98,7 +98,7 @@
 
     <TextView
         android:id="@+id/forgot"
-        android:layout_width="60dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/upper_poly"
         android:layout_alignEnd="@+id/upper_poly"
@@ -107,7 +107,7 @@
         android:layout_marginBottom="2dp"
         android:textStyle="italic"
         android:text="@string/forgot"
-        android:textSize="16sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/signinbutton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline5" />
@@ -119,7 +119,7 @@
         android:layout_alignStart="@+id/upper_poly"
         android:layout_alignTop="@+id/upper_poly"
         android:layout_alignEnd="@+id/upper_poly"
-        android:layout_marginStart="180dp"
+        android:layout_marginStart="200dp"
         android:layout_marginTop="30dp"
         android:layout_marginBottom="13dp"
         android:background="@drawable/button_signin"
@@ -171,7 +171,7 @@
         android:layout_height="650dp"
         android:rotation="180"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="5dp"
+        android:layout_marginStart="5dp"
         android:src="@drawable/login_lower_poly"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -253,7 +253,7 @@
         android:id="@+id/register_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="50dp"
         android:layout_marginTop="152dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="14dp"
@@ -273,11 +273,13 @@
         android:layout_marginStart="135dp"
         android:layout_marginTop="160dp"
         android:layout_marginBottom="20dp"
+        android:layout_marginEnd="180dp"
         android:background="@color/transparent"
         android:src="@drawable/login_circle_right"
         android:onClick="ontransiton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline3" >
     </ImageButton>
 
@@ -286,22 +288,21 @@
         android:rotation="90"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_marginStart="140.3dp"
-        android:layout_marginTop="152dp"
-        android:layout_marginBottom="10dp"
         android:src="@drawable/ic_arrow_pointing_to_right"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline3"/>
+        app:layout_constraintEnd_toEndOf="@id/imageButton2"
+        app:layout_constraintBottom_toBottomOf="@id/imageButton2"
+        app:layout_constraintStart_toStartOf="@id/imageButton2"
+        app:layout_constraintTop_toTopOf="@+id/imageButton2"/>
+
     <ImageButton
         android:id="@+id/imageButton1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="31dp"
-        android:layout_marginTop="70dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginEnd="45dp"
+        android:layout_marginTop="20dp"
         android:background="@color/transparent"
         android:src="@drawable/login_circle_right"
-        app:layout_constraintBottom_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/guideline" >
     </ImageButton>
@@ -311,26 +312,23 @@
         android:rotation="-90"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_marginEnd="36.3dp"
-        android:layout_marginTop="67dp"
         android:onClick="onsigninintransition"
         android:src="@drawable/ic_arrow_pointing_to_right"
-        app:layout_constraintBottom_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/guideline"/>
+        app:layout_constraintStart_toStartOf="@id/imageButton1"
+        app:layout_constraintBottom_toTopOf="@id/imageButton1"
+        app:layout_constraintEnd_toEndOf="@id/imageButton1"
+        app:layout_constraintTop_toBottomOf="@+id/imageButton1"/>
 
     <TextView
         android:id="@+id/signinText"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:text="@string/sign_in"
-        android:textSize="24sp"
+        android:textSize="30sp"
         android:textStyle="bold"
         android:layout_marginStart="300dp"
-        android:layout_marginTop="62dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginRight="20dp"
-        app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageButton1"
         app:layout_constraintTop_toBottomOf="@+id/guideline"
         />
