--- a/app/src/main/res/layout/hamburgerbottomsheet.xml
+++ b/app/src/main/res/layout/hamburgerbottomsheet.xml
@@ -19,31 +19,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="5dp">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@string/settings"
-                android:textStyle="bold"
-                android:textSize="40sp"
-                android:layout_weight="1"/>
-
-            <ImageButton
-                android:id="@+id/close"
-                android:layout_width="54dp"
-                android:layout_height="54dp"
-                android:background="@color/transparent"
-                android:onClick="closeBS"
-                android:src="@drawable/ic_close"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:clickable="true"
-            android:focusable="true"
+            android:focusable="false"
             android:orientation="horizontal"
             android:layout_margin="8dp">
 
@@ -57,12 +34,42 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/profile"
+                android:text="@string/name"
                 android:textSize="27sp"
                 android:layout_weight="20"
                 android:layout_marginStart="5dp"/>
 
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clickable="false"
+            android:focusable="true"
+            android:orientation="horizontal"
+            android:layout_margin="8dp">
+            <ImageView
+                android:contentDescription="@string/email"
+                android:layout_width="37dp"
+                android:layout_height="37dp"
+                android:src="@drawable/ic_email"
+                android:layout_weight="1"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/email"
+                    android:textSize="27sp"
+                    android:textStyle="italic"
+                    android:layout_weight="20"
+                    android:layout_marginStart="5dp"/>
+        </LinearLayout>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/cardview_dark_background"
+            android:layout_margin="5dp"/>
 
         <LinearLayout
             android:id="@+id/about_us"
