--- a/app/src/main/res/layout/layout_cardview_home.xml
+++ b/app/src/main/res/layout/layout_cardview_home.xml
@@ -14,6 +14,7 @@
         android:scaleX="1">
 
         <android.support.v7.widget.CardView
+            android:id="@+id/home_cardbg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
@@ -23,7 +24,6 @@
             app:cardCornerRadius="50dp"
             android:background="@color/transparent"
             android:layout_gravity="center">
-
 
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/constView"
