--- a/app/src/main/res/drawable/login_upper_poly.xml
+++ b/app/src/main/res/drawable/login_upper_poly.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:drawable="@drawable/ic_upperpolygon"
+        android:drawable="@drawable/ic_polygon"
         android:left="-200dp"
         android:right="-200dp"
         android:top="-800dp"
