--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,8 +4,29 @@
     android:id="@+id/parentLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/homebg_esummit"
+    android:background="#EEF2F2"
     android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/home_bg1"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:src="@drawable/homebg_esummit"/>
+    <ImageView
+        android:id="@+id/home_bg2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/homebg_event"/>
+    <ImageView
+        android:id="@+id/home_bg3"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/homebg_bquiz"/>
+    <ImageView
+        android:id="@+id/home_bg4"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/homebg_sponsors"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/home_recycler"
@@ -14,8 +35,9 @@
         android:layout_marginTop="150dp"
         app:layout_constraintTop_toTopOf="parent"
         android:foregroundGravity="center"
-        android:overScrollMode="never"
+        android:orientation="horizontal"
         android:clipToPadding="false"/>
+
 
     <android.support.v7.widget.AppCompatImageButton
         android:layout_width="100dp"
