--- a/app/src/main/res/layout/hamburgerbottomsheet.xml
+++ b/app/src/main/res/layout/hamburgerbottomsheet.xml
@@ -26,10 +26,11 @@
 
             <ImageView
                 android:contentDescription="@string/profile"
-                android:layout_width="37dp"
-                android:layout_height="37dp"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:src="@drawable/ic_username"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:padding="5dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -50,10 +51,11 @@
             android:layout_margin="8dp">
             <ImageView
                 android:contentDescription="@string/email"
-                android:layout_width="37dp"
-                android:layout_height="37dp"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:src="@drawable/ic_email"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:padding="5dp"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -82,8 +84,8 @@
 
             <ImageView
                 android:contentDescription="@string/about_us"
-                android:layout_width="37dp"
-                android:layout_height="37dp"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:src="@drawable/ic_call"
                 android:layout_weight="1"/>
 
@@ -95,7 +97,8 @@
                 android:clickable="true"
                 android:focusable="true"
                 android:layout_weight="15"
-                android:layout_marginStart="5dp"/>
+                android:layout_marginStart="5dp"
+                android:padding="5dp"/>
 
         </LinearLayout>
 
@@ -110,10 +113,11 @@
 
             <ImageView
                 android:contentDescription="@string/log_out"
-                android:layout_width="37dp"
-                android:layout_height="37dp"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:src="@drawable/ic_log_out"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:padding="5dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -127,44 +131,7 @@
 
         </LinearLayout>
 
-        <!--<TextView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:textSize="18sp"-->
-        <!--android:text="@string/name"-->
-        <!--android:padding="10dp"/>-->
 
-        <!--<TextView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="@string/email"-->
-        <!--android:layout_marginTop="50dp"-->
-        <!--android:textSize="15sp"-->
-        <!--android:textStyle="italic"-->
-        <!--android:padding="10dp"/>-->
-
-        <!--<Button-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:id="@+id/about_us"-->
-        <!--android:layout_marginTop="100dp"-->
-        <!--android:background="@color/colorWhite"-->
-        <!--android:text="@string/about_us"-->
-        <!--android:textSize="15sp"-->
-        <!--android:textAlignment="textStart"-->
-        <!--android:padding="10dp"/>-->
-
-        <!--<Button-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:id="@+id/sign_out"-->
-        <!--android:layout_marginTop="150dp"-->
-        <!--android:text="@string/signout"-->
-        <!--android:background="@color/colorWhite"-->
-        <!--android:textSize="15sp"-->
-        <!--android:textAlignment="textStart"-->
-        <!--android:padding="10dp" />-->
-        <!--</LinearLayout>-->
 
     </LinearLayout>
 
