--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -11,32 +11,26 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/home_recycler"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_marginTop="100dp"
+        android:layout_height="450dp"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:foregroundGravity="center"
+        android:layout_marginTop="180dp"
+        android:layout_marginBottom="180dp"
         android:overScrollMode="never"
         android:clipToPadding="false"/>
 
     <android.support.v7.widget.AppCompatImageButton
+        android:id="@+id/hamburgerButton"
         android:layout_width="100dp"
         android:layout_height="70dp"
         android:src="@drawable/ic_hamburger"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="150dp"
         android:layout_marginEnd="150dp"
-        android:onClick="hamburgerClicked"
         android:background="@color/transparent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
-
-    <!--android.support.design.widget.CoordinatorLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
-        <include layout="@layout/hamburgerbottomsheet"/>
-    </android.support.design.widget.CoordinatorLayout-->
 
 </android.support.constraint.ConstraintLayout>
