--- a/app/src/main/res/layout/hamburgerbottomsheet.xml
+++ b/app/src/main/res/layout/hamburgerbottomsheet.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:layout_behavior="android.support.design.widget.BottomSheetBehaviour"
     android:id="@+id/bottom_sheet"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    style="@style/RoundedBottomSheet"
-    android:orientation="vertical"
+    style="@style/BaseBottomSheetDialog"
     app:behavior_hideable="true"
     app:behavior_peekHeight="80dp"
     android:padding="15dp">
 
     <LinearLayout
+        android:background="@color/transparent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -22,15 +23,15 @@
             android:clickable="true"
             android:focusable="false"
             android:orientation="horizontal"
-            android:layout_margin="8dp">
+            android:layout_margin="4dp">
 
             <ImageView
                 android:contentDescription="@string/profile"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:src="@drawable/ic_username"
                 android:layout_weight="1"
-                android:padding="5dp"/>
+                android:paddingTop="8dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -38,7 +39,7 @@
                 android:text="@string/name"
                 android:textSize="27sp"
                 android:layout_weight="20"
-                android:layout_marginStart="5dp"/>
+                android:layout_marginStart="10dp"/>
 
         </LinearLayout>
 
@@ -48,14 +49,14 @@
             android:clickable="false"
             android:focusable="true"
             android:orientation="horizontal"
-            android:layout_margin="8dp">
+            android:layout_margin="4dp">
             <ImageView
                 android:contentDescription="@string/email"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:src="@drawable/ic_email"
                 android:layout_weight="1"
-                android:padding="5dp"/>
+                android:paddingTop="8dp"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -64,14 +65,15 @@
                     android:textSize="27sp"
                     android:textStyle="italic"
                     android:layout_weight="20"
-                    android:layout_marginStart="5dp"/>
+                    android:layout_marginStart="10dp"/>
         </LinearLayout>
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:background="@color/cardview_dark_background"
-            android:layout_margin="5dp"/>
+            android:alpha="0.5"
+            android:background="@color/colorLightBlack"
+            android:layout_margin="2dp"/>
 
         <LinearLayout
             android:id="@+id/about_us"
@@ -80,14 +82,15 @@
             android:orientation="horizontal"
             android:clickable="true"
             android:focusable="true"
-            android:layout_margin="8dp">
+            android:layout_margin="4dp">
 
             <ImageView
                 android:contentDescription="@string/about_us"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:layout_width="33dp"
+                android:layout_height="33dp"
                 android:src="@drawable/ic_call"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:paddingTop="10dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -96,9 +99,8 @@
                 android:textSize="27sp"
                 android:clickable="true"
                 android:focusable="true"
-                android:layout_weight="15"
-                android:layout_marginStart="5dp"
-                android:padding="5dp"/>
+                android:layout_weight="20"
+                android:layout_marginStart="10dp"/>
 
         </LinearLayout>
 
@@ -109,15 +111,15 @@
             android:orientation="horizontal"
             android:clickable="true"
             android:focusable="true"
-            android:layout_margin="8dp">
+            android:layout_margin="4dp">
 
             <ImageView
                 android:contentDescription="@string/log_out"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:layout_width="33dp"
+                android:layout_height="33dp"
                 android:src="@drawable/ic_log_out"
                 android:layout_weight="1"
-                android:padding="5dp"/>
+                android:paddingTop="10dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -126,8 +128,8 @@
                 android:textSize="27sp"
                 android:clickable="true"
                 android:focusable="true"
-                android:layout_weight="15"
-                android:layout_marginStart="5dp"/>
+                android:layout_weight="20"
+                android:layout_marginStart="10dp"/>
 
         </LinearLayout>
 
