--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,9 +19,20 @@
 
     </style>
 
-    <style name="RoundedBottomSheet" parent="Widget.Design.BottomSheet.Modal">
-        <item name="android:background">@color/transparent</item>
+
+    <style name="BottomSheetDialogTheme" parent="BaseBottomSheetDialog">
     </style>
+
+    <style name="BottomSheet" parent="@style/Widget.Design.BottomSheet.Modal">
+        <item name="android:background">@drawable/bottomsheet_bg</item>
+    </style>
+
+    <style name="BaseBottomSheetDialog" parent="@style/Theme.Design.Light.BottomSheetDialog">
+        <item name="android:windowIsFloating">false</item>
+        <item name="bottomSheetStyle">@style/BottomSheet</item>
+    </style>
+
+
 
     <style name="FullscreenTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:actionBarStyle">@style/FullscreenActionBarStyle</item>
